--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -1,15 +1,19 @@
-.ukraine-flag-blue {
-    width: 100%;
-    height: 50%;
-    background-color: $ukraine-blue;
-    @include flex-jcCenter-aiCenter;
-    font-size: 2rem;
-}
-.ukraine-flag-yellow {
-    width: 100%;
-    height: 50%;
-    background-color: $ukraine-yellow;
-    @include flex-jcCenter-aiCenter;
-    font-size: 2rem;
-    margin-bottom: 2%;
+header {
+    font-family: $font-family-header;
+    font-weight: 600;
+    .ukraine-flag-blue {
+        width: 100%;
+        height: 50%;
+        background-color: $ukraine-blue;
+        @include flex-jcCenter-aiCenter;
+        font-size: 2rem;
+    }
+    .ukraine-flag-yellow {
+        width: 100%;
+        height: 50%;
+        background-color: $ukraine-yellow;
+        @include flex-jcCenter-aiCenter;
+        font-size: 2rem;
+        margin-bottom: 2%;
+    }
 }
