--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,7 +13,7 @@
   max-width: 100vw;
   height: 50vh;
   grid-template-columns: 1fr;
-  grid-template-rows: 27vh 100vh 30vh;
+  grid-template-rows: 27vh 125vh 30vh;
   grid-template-areas: "header" "main" "footer";
 }
 
@@ -33,7 +33,11 @@ footer {
   background-color: #3f3434;
 }
 
-.ukraine-flag-blue {
+header {
+  font-family: "inter", "sans-serif";
+  font-weight: 600;
+}
+header .ukraine-flag-blue {
   width: 100%;
   height: 50%;
   background-color: #0258B5;
@@ -42,8 +46,7 @@ footer {
   align-items: center;
   font-size: 2rem;
 }
-
-.ukraine-flag-yellow {
+header .ukraine-flag-yellow {
   width: 100%;
   height: 50%;
   background-color: #F6CF25;
@@ -61,7 +64,7 @@ main {
 main article {
   border: 5px black solid;
   width: auto;
-  height: 20vh;
+  height: 25vh;
   margin-bottom: 2%;
   display: flex;
   flex-direction: column;
@@ -81,10 +84,19 @@ main article .bank-name-section div:first-child {
   height: 3rem;
   border-radius: 50%;
 }
-main article .bank-name-section div:nth-child(2) {
+main article .bank-name-section .bank-name {
   border: 2px red dashed;
   width: 14rem;
-  height: 2.5rem;
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+}
+main article .bank-name-section .bank-name a:link,
+main article .bank-name-section .bank-name a:visited {
+  text-decoration: none;
+  color: #0258B5;
 }
 main article .bank-info-section-container {
   border: 2px goldenrod dashed;
@@ -98,6 +110,7 @@ main article .bank-info-section-container div:first-child {
   border: 2px goldenrod solid;
   width: 85%;
   height: 90%;
+  text-align: justify;
 }
 
 footer {
