inspiration link added

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -1,5 +1,5 @@
 header {
-    font-family: $font-family-header;
+    font-family: $font-family-inter;
     font-weight: 600;
     .ukraine-flag-blue {
         width: 100%;
