--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,7 +13,7 @@
   max-width: 100vw;
   height: 50vh;
   grid-template-columns: 1fr;
-  grid-template-rows: 27vh 125vh 30vh;
+  grid-template-rows: 27vh 145vh 30vh;
   grid-template-areas: "header" "main" "footer";
 }
 
@@ -60,11 +60,12 @@ header .ukraine-flag-yellow {
 main {
   display: flex;
   flex-direction: column;
+  font-family: "inter", "sans-serif";
 }
 main article {
   border: 5px black solid;
   width: auto;
-  height: 25vh;
+  height: 26vh;
   margin-bottom: 2%;
   display: flex;
   flex-direction: column;
@@ -72,7 +73,7 @@ main article {
 main article .bank-name-section {
   border: 2px blue dashed;
   width: auto;
-  height: 40%;
+  height: 30%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -80,9 +81,17 @@ main article .bank-name-section {
 }
 main article .bank-name-section div:first-child {
   border: 2px green dashed;
-  width: 3rem;
-  height: 3rem;
+  width: 3.3rem;
+  height: 3.3rem;
   border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main article .bank-name-section div:first-child img {
+  object-fit: cover;
+  width: 3rem;
 }
 main article .bank-name-section .bank-name {
   border: 2px red dashed;
@@ -91,17 +100,18 @@ main article .bank-name-section .bank-name {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.2rem;
+  font-size: 15px;
 }
 main article .bank-name-section .bank-name a:link,
 main article .bank-name-section .bank-name a:visited {
   text-decoration: none;
   color: #0258B5;
+  font-weight: 600;
 }
 main article .bank-info-section-container {
   border: 2px goldenrod dashed;
   width: auto;
-  height: 60%;
+  height: 70%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -110,7 +120,6 @@ main article .bank-info-section-container div:first-child {
   border: 2px goldenrod solid;
   width: 85%;
   height: 90%;
-  text-align: justify;
 }
 
 footer {
