--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,3 +1,3 @@
 $ukraine-blue: #0258B5;
 $ukraine-yellow: #F6CF25;
-$font-family-header: 'inter', 'sans-serif';
+$font-family-inter: 'inter', 'sans-serif';
