--- a/src/scss/layouts/_main-section.scss
+++ b/src/scss/layouts/_main-section.scss
@@ -1,45 +1,53 @@
 main {
         display: flex;
         flex-direction: column;
+        font-family: $font-family-inter;
         article {
         border: 5px black solid;
         width: auto;
-        height: 25vh;
+        height: 26vh;
         margin-bottom: 2%;
         @include flex-column;
 
         .bank-name-section {
             border: 2px blue dashed;
             width: auto;
-            height: 40%;
+            height: 30%;
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: space-evenly;
             div:first-child {
                 border: 2px green dashed;
-                width: 3rem;
-                height: 3rem;
+                width: 3.3rem;
+                height: 3.3rem;
                 border-radius: 50%;
+                overflow: hidden;
+                @include flex-jcCenter-aiCenter;
+                img {
+                    object-fit: cover;
+                    width: 3rem;
+                }
             }
             .bank-name {
                 border: 2px red dashed;
                 width: 14rem;
                 height: 3rem;
                 @include flex-jcCenter-aiCenter;
-                font-size: 1.2rem;
+                font-size: 15px;
                 a:link,
                 a:visited {
                     text-decoration: none;
                     color: $ukraine-blue;
                     // background-color: green;
+                    font-weight: 600;
                 }
             }
         }
         .bank-info-section-container {
             border: 2px goldenrod dashed;
             width: auto;
-            height: 60%;
+            height: 70%;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -47,8 +55,20 @@ main {
                 border: 2px goldenrod solid;
                 width: 85%;
                 height: 90%;
-                text-align: justify;
             }
         }
     }
+    // .paypal-payment-section {
+    //     border: 2px green solid;
+    //     height: 35vh;
+    //     .paypal-name-section {
+    //         height: 25%;
+    //         font-family: $font-family-inter;
+    //         font-size: 14px;
+    //         font-weight: 600;
+    //     }
+    //     .paypal-info-section {
+    //         height: 70%;
+    //     }
+    // }
 }
