--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,4 +15,5 @@ body {
     // background-color: rgb(136, 59, 14);
     max-width: 100%;
     height: 100vh;
+    font-family: $font-family-inter;
 }
