--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,7 +13,7 @@
   max-width: 100vw;
   height: 50vh;
   grid-template-columns: 1fr;
-  grid-template-rows: 27vh 145vh 30vh;
+  grid-template-rows: 27vh 135vh 30vh;
   grid-template-areas: "header" "main" "footer";
 }
 
@@ -98,7 +98,7 @@ main article .bank-name-section .bank-name {
   width: 14rem;
   height: 3rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   font-size: 15px;
 }
@@ -121,6 +121,11 @@ main article .bank-info-section-container div:first-child {
   width: 85%;
   height: 90%;
 }
+main article .bank-info-section-container div:first-child p {
+  font-style: italic;
+  font-size: 13px;
+  margin-top: 2%;
+}
 
 footer {
   display: flex;
@@ -129,15 +134,16 @@ footer {
   align-items: center;
 }
 footer article {
-  border: wheat 2px solid;
   width: 80%;
   height: 35%;
+  font-weight: 600;
 }
 footer article:first-child {
   background-color: #013975;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #9e8619;
 }
 footer article:nth-child(2) {
   background-color: #9e8619;
@@ -145,22 +151,36 @@ footer article:nth-child(2) {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 3%;
 }
 footer article:nth-child(2) div:first-child {
-  border: 2px white dotted;
   width: 70%;
   height: 4rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+footer .inpiration-link {
+  text-align: center;
+  margin-bottom: 5%;
+  color: grey;
+}
+footer .inpiration-link a:link,
+footer .inpiration-link a:visited {
+  text-decoration: underline;
+  font-weight: 600;
+  color: wheat;
+}
 footer .author-line {
   color: #a3a3a3;
+  margin-bottom: 5%;
+  font-size: 13px;
 }
 
 body {
   max-width: 100%;
   height: 100vh;
+  font-family: "inter", "sans-serif";
 }
 
 /*# sourceMappingURL=main.css.map */
