--- a/src/scss/layouts/__layouts-dir.scss
+++ b/src/scss/layouts/__layouts-dir.scss
@@ -2,3 +2,5 @@
 @import "_header.scss";
 @import "_main-section.scss";
 @import "_footer.scss";
+
+@import "./media-query-desktop/_media-query-desktop-dir";
