--- a/src/scss/layouts/_main-section.scss
+++ b/src/scss/layouts/_main-section.scss
@@ -5,22 +5,22 @@ main {
         article {
         border: 5px black solid;
         width: auto;
-        height: 26vh;
-        margin-bottom: 2%;
+        height: 32vh;
+        margin-bottom: 4%;
         @include flex-column;
 
         .bank-name-section {
             border: 2px blue dashed;
             width: auto;
-            height: 30%;
+            height: 40%;
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: space-evenly;
             div:first-child {
                 border: 2px green dashed;
-                width: 3.3rem;
-                height: 3.3rem;
+                width: 3rem;
+                height: 3rem;
                 border-radius: 50%;
                 overflow: hidden;
                 @include flex-jcCenter-aiCenter;
@@ -46,15 +46,15 @@ main {
         }
         .bank-info-section-container {
             border: 2px goldenrod dashed;
-            width: auto;
-            height: 70%;
+            width: 100%;
+            height: 75%;
             display: flex;
             align-items: center;
             justify-content: center;
             div:first-child {
                 border: 2px goldenrod solid;
                 width: 85%;
-                height: 90%;
+                height: 95%;
                 p {
                     font-style: italic;
                     font-size: 13px;
