--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,7 +13,7 @@
   max-width: 100vw;
   height: 50vh;
   grid-template-columns: 1fr;
-  grid-template-rows: 27vh 135vh 30vh;
+  grid-template-rows: 27vh 160vh 40vh;
   grid-template-areas: "header" "main" "footer";
 }
 
@@ -65,15 +65,15 @@ main {
 main article {
   border: 5px black solid;
   width: auto;
-  height: 26vh;
-  margin-bottom: 2%;
+  height: 32vh;
+  margin-bottom: 4%;
   display: flex;
   flex-direction: column;
 }
 main article .bank-name-section {
   border: 2px blue dashed;
   width: auto;
-  height: 30%;
+  height: 40%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -81,8 +81,8 @@ main article .bank-name-section {
 }
 main article .bank-name-section div:first-child {
   border: 2px green dashed;
-  width: 3.3rem;
-  height: 3.3rem;
+  width: 3rem;
+  height: 3rem;
   border-radius: 50%;
   overflow: hidden;
   display: flex;
@@ -110,8 +110,8 @@ main article .bank-name-section .bank-name a:visited {
 }
 main article .bank-info-section-container {
   border: 2px goldenrod dashed;
-  width: auto;
-  height: 70%;
+  width: 100%;
+  height: 75%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -119,7 +119,7 @@ main article .bank-info-section-container {
 main article .bank-info-section-container div:first-child {
   border: 2px goldenrod solid;
   width: 85%;
-  height: 90%;
+  height: 95%;
 }
 main article .bank-info-section-container div:first-child p {
   font-style: italic;
@@ -177,6 +177,22 @@ footer .author-line {
   font-size: 13px;
 }
 
+@media only screen and (min-width: 1400px) {
+  main article {
+    align-items: center;
+  }
+  main article .bank-name-section {
+    width: 85%;
+    justify-content: flex-start;
+  }
+  main article .bank-name-section div:first-child {
+    width: 4rem;
+    height: 4rem;
+  }
+  main article .bank-name {
+    margin-left: 2%;
+  }
+}
 @media only screen and (min-width: 1400px) {
   body {
     display: flex;
