--- a/src/scss/layouts/media-query-desktop/_desktop-main.scss
+++ b/src/scss/layouts/media-query-desktop/_desktop-main.scss
@@ -13,6 +13,11 @@
             .bank-name {
                 margin-left: 2%;
             }
+            .bank-info-section-container {
+                .bank-info {
+                    font-size: 20px;
+                }
+            }
         }
     }
 }
