--- a/styles/main.css
+++ b/styles/main.css
@@ -36,11 +36,12 @@ footer {
 header {
   font-family: "inter", "sans-serif";
   font-weight: 600;
+  background: -prefix-linear-gradient(top, #0258B5, #F6CF25);
+  background: linear-gradient(to bottom, #0258B5, #F6CF25);
 }
 header .ukraine-flag-blue {
   width: 100%;
   height: 50%;
-  background-color: #0258B5;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -49,7 +50,6 @@ header .ukraine-flag-blue {
 header .ukraine-flag-yellow {
   width: 100%;
   height: 50%;
-  background-color: #F6CF25;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,15 +63,16 @@ main {
   font-family: "inter", "sans-serif";
 }
 main article {
-  border: 5px black solid;
+  border: 2px black solid;
   width: auto;
   height: 32vh;
+  margin-top: 1%;
   margin-bottom: 4%;
   display: flex;
   flex-direction: column;
+  box-shadow: 2px 2px 3px gray;
 }
 main article .bank-name-section {
-  border: 2px blue dashed;
   width: auto;
   height: 40%;
   display: flex;
@@ -80,7 +81,7 @@ main article .bank-name-section {
   justify-content: space-evenly;
 }
 main article .bank-name-section div:first-child {
-  border: 2px green dashed;
+  border: 2px #494949 solid;
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
@@ -94,7 +95,6 @@ main article .bank-name-section div:first-child img {
   width: 3rem;
 }
 main article .bank-name-section .bank-name {
-  border: 2px red dashed;
   width: 14rem;
   height: 3rem;
   display: flex;
@@ -109,7 +109,6 @@ main article .bank-name-section .bank-name a:visited {
   font-weight: 600;
 }
 main article .bank-info-section-container {
-  border: 2px goldenrod dashed;
   width: 100%;
   height: 75%;
   display: flex;
@@ -117,7 +116,6 @@ main article .bank-info-section-container {
   justify-content: center;
 }
 main article .bank-info-section-container div:first-child {
-  border: 2px goldenrod solid;
   width: 85%;
   height: 95%;
 }
