--- a/src/scss/layouts/media-query-desktop/_desktop-main.scss
+++ b/src/scss/layouts/media-query-desktop/_desktop-main.scss
@@ -21,3 +21,27 @@
         }
     }
 }
+
+@media only screen and (min-width: 560px) {
+    main {
+        article {
+            align-items: center;
+            .bank-name-section {
+                width: 85%;
+                justify-content: flex-start;
+                div:first-child {
+                    width: 4rem;
+                    height: 4rem;
+                }
+            }
+            .bank-name {
+                margin-left: 2%;
+            }
+            .bank-info-section-container {
+                .bank-info {
+                    font-size: 20px;
+                }
+            }
+        }
+    }
+}
