--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -1,5 +1,6 @@
 footer {
 @include flex-column-jcEvenly-aiCenter;
+margin-top: 2%;
     article{
         // border: wheat 2px solid;
         width: 80%;
