--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -131,6 +131,7 @@ footer {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  margin-top: 2%;
 }
 footer article {
   width: 80%;
