seebruecke donation added + footer bug solved

--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -1,31 +1,44 @@
 footer {
 @include flex-column-jcEvenly-aiCenter;
+
 margin-top: 2%;
     article{
-        // border: wheat 2px solid;
+        border: wheat 2px solid;
         width: 80%;
         height: 35%;
         font-weight: 600;
     }
     article:first-child {
-        background-color: #013975 ;
-        @include flex-jcCenter-aiCenter;
-        color: #9e8619;
-    }
-    article:nth-child(2) {
-        background-color: #9e8619;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 3%;
+
+        // margin-top: 5%;
         div:first-child {
-            // border: 2px white dotted;
-            width: 70%;
-            height: 4rem;
+            background-color: #013975 ;
+            color: #9e8619;
+            height: 50%;
+            @include flex-jcCenter-aiCenter;
+        }
+        div:nth-child(2) {
+            background-color: #9e8619;
+            height: 50%;
             @include flex-jcCenter-aiCenter;
         }
     }
+    // article:nth-child(2) {
+    //     background-color: #9e8619;
+    //     display: flex;
+    //     flex-direction: column;
+    //     justify-content: center;
+    //     align-items: center;
+    //     margin-bottom: 3%;
+    //     div:first-child {
+    //         // border: 2px white dotted;
+    //         width: 70%;
+    //         height: 4rem;
+    //         @include flex-jcCenter-aiCenter;
+    //     }
+    // }
     .inpiration-link {
         text-align: center;
         margin-bottom: 5%;
