--- a/src/scss/layouts/_main-section.scss
+++ b/src/scss/layouts/_main-section.scss
@@ -4,6 +4,7 @@ main {
         font-family: $font-family-inter;
         article {
         border: 2px black solid;
+        border-radius: 3px;
         width: auto;
         height: 32vh;
         margin-top: 1%;
@@ -30,7 +31,12 @@ main {
                     object-fit: cover;
                     width: 3rem;
                 }
+                .logo-seebruecke {
+
+                    width: 5rem;
+                }
             }
+
             .bank-name {
                 // border: 2px red dashed;
                 width: 14rem;
@@ -65,6 +71,7 @@ main {
             }
         }
     }
+
     // .paypal-payment-section {
     //     border: 2px green solid;
     //     height: 35vh;
