seebruecke donation added + footer bug solved

--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -3,7 +3,7 @@ footer {
 
 margin-top: 2%;
     article{
-        border: wheat 2px solid;
+        // border: wheat 2px solid;
         width: 80%;
         height: 35%;
         font-weight: 600;
